@@ -1,3 +1,12 @@
+20221216
+*Fix bugs related -PP option
+
+20221215
+*Fix bugs in find_package() and get_binary_pkgname()
+
+20221214
+*Fix bug in main()
+
 20221212
 *Fix bug in find_package()
 
